[package]
name = "autoware_manual_control"
version = "0.1.0"
edition = "2021"
authors = ["ChenYing Kuo <evshary@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.6.0-beta.1"
crossterm = "0.25.0"
serde = "1.0.147"
serde_derive = "1.0.147"
cdr = "0.2.4"
atomic_float = "0.1.0"
num = "0.4.0"
