[package]
name = "autoware_manual_control"
version = "0.2.0"
edition = "2021"
authors = ["ChenYing Kuo <evshary@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.7.2-rc"
crossterm = "0.25.0"
serde = "1.0.147"
serde_derive = "1.0.147"
cdr = "0.2.4"
atomic_float = "0.1.0"
num = "0.4.0"
clap = "3.2.12"
#zenoh-ros-type = "0.2.0"
zenoh-ros-type = { git = "https://github.com/evshary/zenoh-ros-type", branch = "main" }
